<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/id"
                android:textColor="#000000"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/id"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/round_input"
                android:paddingLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/round_input"
                android:paddingLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/pwd1"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/round_input"
                android:inputType="textPassword"
                android:paddingLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/password02"
                android:textColor="#000000"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/pwd2"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/round_input"
                android:inputType="textPassword"
                android:paddingLeft="10dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/reg"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@drawable/round_corner"
                android:backgroundTint="#3F51B5"
                android:text="注册"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>